# bitvector

./: .gitignore  BitBasic.h  Bitvect.h  Bitvector.h  Buffer.h  CMakeLists.txt  ExternalBitvect.h  LRUCacheStorage.cpp  LRUCacheStorage.h  Storage.h  main.cpp  readme.tex
dataset/: uniform16x16.txt  uniform32x32.txt  uniform64x64.txt
src/: BitBasic.h  Buffer.h  CMakeLists.txt  ExternalBitvect.h  ExternalK2Tree.h  LFUCacheStorage.h  LRUCacheStorage.h  Page.h  Storage.h  main.cpp
test/: CMakeLists.txt  main.cpp  pruebas.cpp
